--------------------------
Changes in 1.9 (not yet released)

- Empty meshes and meshbuffers now have invalid bounding-boxes. 
  Meshes no longer add invalid meshbuffer bounding boxes when recalculating their bounding box.
  Fixes bugs that empty meshbuffers could increase the bounding box sometimes and that SMesh could ignore meshbuffers with a single point.
- Avoid unnecessary string copies in GUI code when drawing fonts (accidentally introduced in Irrlicht 1.6).
- IGUIScrollBar has now getters for the scrollbar buttons and the options to disable background drawing
- Improved scrollbar handling in CGUITreeView (stepsizes, reacting to keys)
- Add IGUITreeView::getNextNode (traverse full tree), getPrevNode, getLastSelectTriggerEvent (to get mouse-keys) and scrollTo.
- Bugfix: CGUITreeView no longer dropping EGET_TREEVIEW_NODE_SELECT events when moving mouse while clicking
- CGUITreeView now shows expand icon (+/-) for sub-nodes with correct text-color
- Bugfix: CGUITreeView now aligns scrollbars correct so they work on resize
- obj/mtl loader no longer messes up bump textures when the name starts with a number
- CImageLoaderBMP now supports loading 1-bit images with palette data
- Hardware meshbuffers are now deleted when they hold the last reference to a meshbuffer
- Variable order inside SMaterial and SMaterialLayer changed for better packing
- line3d::getClosestPoint can now chose between using line or line segment
- MY3D loader deprecated and disabled by default as MY3D tools can't be found on the web anymore. Also could always be used as external loader.
- createCylinderMesh, createArrowMesh and createConeMesh in GeometryCreator tessellation numbers now for full instead of semi-circle.
  Double your tessellation numbers to get same results as in 1.8
  Sorry had to break as old solution didn't allow for odd numbers. Also was documented otherwise, so was a bug.
- Change in UV's for top/bottom center vertex in CGeometryCreator::createCylinderMesh